--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - In the World but Not Of It</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Japan’s Hidden Experience You Can’t Miss</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN PLAY FORTNITE UNTIL WE WIN</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Your Pizza Questions, My Honest Answers</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>The Kashi You Visit Is Not The Real Kashi! | 4K UHD | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -816,7 +816,7 @@
                     <div class="video-info">
                         <h3>12 YEARS OF SIDEMEN 🥳</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -827,7 +827,7 @@
                     <div class="video-info">
                         <h3>What's The Best Month For Stocks?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5303,7 +5303,7 @@
                         <div class="video-info">
                             <h3>What's The Best Month For Stocks?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - In the World but Not Of It</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>The Kashi You Visit Is Not The Real Kashi! | 4K UHD | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8234,7 +8234,7 @@
                         <div class="video-info">
                             <h3>Japan’s Hidden Experience You Can’t Miss</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Your Pizza Questions, My Honest Answers</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN PLAY FORTNITE UNTIL WE WIN</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9627,7 +9627,7 @@
                         <div class="video-info">
                             <h3>12 YEARS OF SIDEMEN 🥳</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
