--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The Best Milk Alternative | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>25 Years of Trading Psychology in Under a Minute 🧠</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -728,6 +728,17 @@
                     <div class="video-info">
                         <h3>The Best Stop Loss Strategy (But flip it)</h3>
                         <div class="channel">Quantified Strategies</div>
+                        <div class="date">6 days ago</div>
+                    </div>
+                </a>
+            </div>
+        
+            <div class="video">
+                <a href="https://www.youtube.com/shorts/_iKaWYktPAA" target="_blank">
+                    <img src="https://i.ytimg.com/vi/_iKaWYktPAA/mqdefault.jpg" alt="Sadhguru’s Message for a Dazzling Diwali">
+                    <div class="video-info">
+                        <h3>Sadhguru’s Message for a Dazzling Diwali</h3>
+                        <div class="channel">Sadhguru</div>
                         <div class="date">6 days ago</div>
                     </div>
                 </a>
@@ -5072,7 +5083,7 @@
                         <div class="video-info">
                             <h3>25 Years of Trading Psychology in Under a Minute 🧠</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7227,7 +7238,7 @@
                         <div class="video-info">
                             <h3>The Best Milk Alternative | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7514,6 +7525,17 @@
                             <h3>Sadhguru's Powerful Message for Volunteers on Diwali</h3>
                             <div class="channel">Sadhguru</div>
                             <div class="date">5 days ago</div>
+                        </div>
+                    </a>
+                </div>
+            
+                <div class="video">
+                    <a href="https://www.youtube.com/shorts/_iKaWYktPAA" target="_blank">
+                        <img src="https://i.ytimg.com/vi/_iKaWYktPAA/mqdefault.jpg" alt="Sadhguru’s Message for a Dazzling Diwali">
+                        <div class="video-info">
+                            <h3>Sadhguru’s Message for a Dazzling Diwali</h3>
+                            <div class="channel">Sadhguru</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
